# OKoffice

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_BOOTSTRAP_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARNESS_MANIFEST.json  NOTICE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
community/: DEPENDENCY_POLICY.md  GOVERNANCE.md  MAINTAINER_GUIDE.md  RFC_TEMPLATE.md
docs/: 00_START_HERE_FOR_CODEX.md  01_PRODUCT_VISION.md  02_OPEN_SOURCE_SCOPE.md  03_ARCHITECTURE.md  04_REPOSITORY_STRUCTURE.md  05_COMPLETE_TOOL_CATALOG.md  06_CORE_TOOL_SPECS.md  07_AI_TOOL_SPECS.md  08_MCP_SERVER_SPEC.md  09_REST_API_SPEC.md  10_CLI_SPEC.md  11_DOCUMENT_IR_SPEC.md  12_STYLE_PACKS.md  13_VALIDATION_AND_DIFF.md  14_SECURITY_AND_PRIVACY.md  15_TESTING_HARNESS.md  16_RELEASE_AND_OPEN_SOURCE.md  17_ROADMAP.md  18_CLOUD_MONETIZATION_BOUNDARY.md  19_DEPENDENCY_AND_LICENSE_POLICY.md  20_BENCHMARKS_AND_COMPETITIVE_MATRIX.md  21_UX_DOCS_AND_POLISH.md  22_REFERENCE_PROJECTS.md  23_FULL_TOOL_STATUS_MATRIX.md  24_WORKFLOW_RECIPES.md  25_SDK_SPEC.md  26_CONFIG_AND_DEPLOYMENT.md  27_INTEGRATIONS_GUIDE.md  28_ACCESSIBILITY_AND_DOCUMENT_QUALITY.md  29_BATCH_AND_WORKFLOW_ENGINE.md  30_PRODUCT_AND_PRICING_NOTES.md  31_LOCAL_AGENT_INTEGRATION.md  32_TYPESCRIPT_NODE_SDK.md  33_REFERENCE_PROJECT_SYNTHESIS.md  34_AGENT_INFRA_AI_CLOUD_STRATEGY.md  35_AGENT_NATIVE_MULTIMODAL_PDF_INFRA_PRD.md  36_OKOFFICE_AGENT_NATIVE_OFFICE_INFRA_PRD.md  37_OKOFFICE_PRODUCT_STRATEGY.md  38_OKOFFICE_TOOL_TAXONOMY.md  39_OKOFFICE_CLOUD_BUSINESS.md  (+5 more)
examples/: api_examples.md  cli_examples.md  research_deck_brief.json  research_deck_evidence.json  research_deck_source_cards.json  research_deck_sources.json
harness/: ACCEPTANCE_TEST_MATRIX.md  DEFINITION_OF_DONE.md  README.md
scaffold/: pyproject.toml
scaffold/scripts/: generate_fixtures.py
scaffold/src/agentpdf/cli/: main.py
scaffold/tests/unit/: test_import.py
schemas/: agent-integration.schema.json  artifact-bundle-manifest.schema.json  artifact.schema.json  common.schema.json  composition-ir.schema.json  context-packet.schema.json  create-agent-run.schema.json  document-ir.schema.json  error-codes.yaml  error.schema.json  evidence-coverage-report.schema.json  job.schema.json  mcp-tools.catalog.json  office-tool-manifest.target.json  openapi.yaml  patch-manifest.schema.json  resume-data.schema.json  resume-design-tokens.schema.json  resume-section-layout.schema.json  slot-routing-plan.schema.json  style-pack.schema.json  target-pdf-profile.schema.json  template-layer-manifest.schema.json  template-pack-plan.schema.json  (+6 more)
scripts/: doctor.py  (+2 more)
(+426 files in other folders)
