[project]
name = "okoffice"
version = "0.1.0"
description = "Agent-native Office infrastructure with a local-first PDF compatibility layer."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "OKoffice contributors"}]
dependencies = [
  "pydantic>=2",
  "typer>=0.12",
  "rich>=13",
  "pypdf>=4",
  "pypdfium2>=5",
  "mcp>=1.27",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "reportlab>=4",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]
api = []
browser-renderer = [
  "playwright>=1.44",
]
typst-renderer = [
  "typst>=0.12",
]

[project.scripts]
agentpdf = "okoffice.cli.main:app"
okpdf = "okoffice.cli.main:app"
okoffice = "okoffice.cli_okoffice.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
