[project]
name = "agentpdf"
version = "0.0.0"
description = "Open-source PDF infrastructure for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "AgentPDF contributors"}]
dependencies = [
  "pydantic>=2",
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]
pdf = [
  "pypdf>=4",
]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.scripts]
agentpdf = "agentpdf.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
